# finger-tracker

./: .gitignore  CLAUDE.md  README.md  REPORT.md  config.yaml  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/skills/execute-review/: SKILL.md
.claude/skills/review/: SKILL.md
docs/archive/: initial_plan.md
docs/design/: GUIDE.md
docs/design/decisions/: 001-technology-stack.md  002-depth-measurement-logic.md  003-data-pipeline.md  004-yolo-training-strategy.md  005-realtime-display.md  006-config-management.md  007-logging-recording.md  008-error-handling.md  009-directory-structure.md  010-udp-publisher.md
docs/plans/: GUIDE.md
docs/plans/resolved/: 001-phase1-config-capture.md  002-phase2-training.md  003-phase3-detection.md  004-udp-publisher.md
docs/review/: GUIDE.md  TEMPLATE.md
docs/status/: implementation.md  roadmap.md
docs/usecases/: GUIDE.md  TEMPLATE.md
src/finger_tracker/capture/: __init__.py  __main__.py
src/finger_tracker/config/: __init__.py  __main__.py
src/finger_tracker/detection/: __init__.py  __main__.py
src/finger_tracker/training/: __init__.py  __main__.py
