[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "finger-tracker"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "ultralytics>=8.0.0",
    "pyrealsense2>=2.50.0",
    "opencv-python>=4.8.0",
    "numpy>=1.26.0",
    "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]
